@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.2257 2004/10/26 05:06:28 snj Exp $
+$NetBSD: TODO,v 1.2258 2004/10/26 05:56:57 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -270,7 +270,6 @@ Suggested package updates
 	o gpsdrive-2.09
 	o grace-5.1.17
 	o gstreamer-0.8.7
-	o gtk-send-pr-0.3.4
 	o gtkglext-1.0.6
 	o gtkmm-2.4.5
 	o gtksee-0.5.6 [pkg/26372]
