@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2004/10/03 00:18:15 tv Exp $
+# $NetBSD: Makefile,v 1.8 2004/10/26 05:56:57 xtraeme Exp $
 #
 
-DISTNAME=		gtk-send-pr-0.3.3
-PKGREVISION=	1
+DISTNAME=		gtk-send-pr-0.3.4
 CATEGORIES=		sysutils
 MASTER_SITES=		http://www.energyhq.es.eu.org/files/
 EXTRACT_SUFX=		.tar.bz2
